...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:layout_marginEnd="@dimen/margin_medium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonClearAll"
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_all"
            android:textColor="?attr/colorError" />

...
